cmake_minimum_required(VERSION 3.10)
project(doom-nukem)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/)

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)

set (CMAKE_C_FLAGS "-g3 -fsanitize=address")
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/includes ${CMAKE_CURRENT_SOURCE_DIR}/includes/libui ${CMAKE_CURRENT_SOURCE_DIR}/libft/includes ${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIR})

add_executable(${PROJECT_NAME}	srcs/animation/animation.c
								srcs/data
								srcs/data/delete_linedef.c
								srcs/data/export_map.c
								srcs/data/export_sector.c
								srcs/data/linedef.c
								srcs/data/map_editor.c
								srcs/data/png_parser.c
								srcs/data/poly.c
								srcs/data/sector.c
								srcs/data/selected_linedef.c
								srcs/data/write_export.c
								srcs/display
								srcs/display/renderer.c
								srcs/display/simple_draw.c
								srcs/display/text.c
								srcs/display/texture.c
								srcs/display/window.c
								srcs/editor_loop
								srcs/editor_loop/check_file.c
								srcs/editor_loop/check_map.c
								srcs/editor_loop/collisions.c
								srcs/editor_loop/ed_convert_value.c
								srcs/editor_loop/ed_delete_map.c
								srcs/editor_loop/ed_display_inclined.c
								srcs/editor_loop/ed_display_mobs.c
								srcs/editor_loop/ed_display_objects.c
								srcs/editor_loop/ed_display_player.c
								srcs/editor_loop/ed_display_poly.c
								srcs/editor_loop/ed_display_selected.c
								srcs/editor_loop/ed_display.c
								srcs/editor_loop/ed_event.c
								srcs/editor_loop/ed_export.c
								srcs/editor_loop/ed_get_display_color.c
								srcs/editor_loop/ed_get_z_limits.c
								srcs/editor_loop/ed_is_next_to_poly.c
								srcs/editor_loop/ed_place_poly.c
								srcs/editor_loop/ed_poly_type.c
								srcs/editor_loop/ed_select_poly.c
								srcs/editor_loop/ed_write_export.c
								srcs/editor_loop/editor_button.c
								srcs/editor_loop/editor_linedef.c
								srcs/editor_loop/editor_loop.c
								srcs/editor_loop/editor_text_input.c
								srcs/editor_loop/ui_left_press.c
								srcs/editor_loop/ui_left_release.c
								srcs/event
								srcs/event/event.c
								srcs/event/mouse.c
								srcs/event/text_input.c
								srcs/event/time.c
								srcs/game_loop
								srcs/game_loop/draw.c
								srcs/game_loop/events.c
								srcs/game_loop/game_loop.c
								srcs/hud
								srcs/hud/dead.c
								srcs/hud/hud.c
								srcs/hud/inventory_hud.c
								srcs/hud/weapon.c
								srcs/inventory
								srcs/inventory/ammo.c
								srcs/inventory/inventory.c
								srcs/inventory/pick_up_obj.c
								srcs/libui
								srcs/libui/button
								srcs/libui/button/ui_button.c
								srcs/libui/button/ui_simple_button.c
								srcs/libui/button/ui_text_area.c
								srcs/libui/button/ui_text_entry_button.c
								srcs/libui/draw
								srcs/libui/draw/draw_shape.c
								srcs/libui/draw/draw.c
								srcs/libui/event
								srcs/libui/event/ui_event.c
								srcs/libui/frame
								srcs/libui/frame/ui_frame.c
								srcs/libui/frame/ui_simple_frame.c
								srcs/libui/load_ui
								srcs/libui/load_ui/ui_check_line_name.c
								srcs/libui/load_ui/ui_general_get.c
								srcs/libui/load_ui/ui_get_b_type.c
								srcs/libui/load_ui/ui_get_flags.c
								srcs/libui/load_ui/ui_get_type.c
								srcs/libui/load_ui/ui_load.c
								srcs/libui/load_ui/ui_parse_button.c
								srcs/libui/load_ui/ui_parse_buttons.c
								srcs/libui/load_ui/ui_parse_frame_data.c
								srcs/libui/load_ui/ui_parse_frame.c
								srcs/libui/load_ui/ui_parse_simple_button.c
								srcs/libui/load_ui/ui_parse_simple_frame.c
								srcs/libui/load_ui/ui_parse_text_area.c
								srcs/libui/load_ui/ui_parse_text_entry_button.c
								srcs/libui/load_ui/ui_parse_text_entry_cut.c
								srcs/libui/load_ui/ui_parse_texture.c
								srcs/libui/load_ui/ui_parse_type.c
								srcs/libui/shape
								srcs/libui/shape/ui_rect.c
								srcs/libui/texture
								srcs/libui/texture/ui_draw_one_line_return.c
								srcs/libui/texture/ui_draw_text_line_return.c
								srcs/libui/texture/ui_draw_text_line.c
								srcs/libui/texture/ui_draw_text_rect.c
								srcs/libui/texture/ui_free_texture_set.c
								srcs/libui/texture/ui_renderer.c
								srcs/libui/texture/ui_text.c
								srcs/libui/texture/ui_texture_list.c
								srcs/libui/texture/ui_texture.c
								srcs/libui/win
								srcs/libui/win/ui_call_button_function.c
								srcs/libui/win/ui_display_buttons.c
								srcs/libui/win/ui_display_frames.c
								srcs/libui/win/ui_display_simple.c
								srcs/libui/win/ui_display_text_area.c
								srcs/libui/win/ui_display_text_entry.c
								srcs/libui/win/ui_get_button_by_id.c
								srcs/libui/win/ui_get_side_rect.c
								srcs/libui/win/ui_mouse.c
								srcs/libui/win/ui_resolve_buttons_event.c
								srcs/libui/win/ui_resolve_text_entry_button.c
								srcs/libui/win/ui_set_button_function.c
								srcs/libui/win/ui_update_buttons.c
								srcs/libui/win/ui_update_frames.c
								srcs/libui/win/ui_win_size.c
								srcs/libui/win/ui_win_update_ui.c
								srcs/libui/win/ui_win.c
								srcs/libui/win/ui.c
								srcs/libui/libuiMain.c
								srcs/libui/ui_error.c
								srcs/libui/ui_init.c
								srcs/menu_loops
								srcs/menu_loops/main_menu.c
								srcs/mobs
								srcs/mobs/mobs.c
								srcs/objects
								srcs/objects/box_object.c
								srcs/objects/object.c
								srcs/objects/objects_actions.c
								srcs/parsing
								srcs/parsing/parse_error.c
								srcs/parsing/parse_utils.c
								srcs/parsing/parsing_mob_utils.c
								srcs/parsing/parsing_mob.c
								srcs/parsing/parsing_music.c
								srcs/parsing/parsing_object_utils.c
								srcs/parsing/parsing_object.c
								srcs/parsing/parsing_player.c
								srcs/parsing/parsing_texture.c
								srcs/parsing/parsing_utils.c
								srcs/parsing/parsing.c
								srcs/physics
								srcs/physics/collisions_cylindre.c
								srcs/physics/collisions_sphere.c
								srcs/physics/collisions.c
								srcs/physics/ft_maths_1.c
								srcs/physics/ft_maths_2.c
								srcs/physics/fts_poly.c
								srcs/physics/insine_poly.c
								srcs/physics/move_3d_functions.c
								srcs/physics/poly_reductions.c
								srcs/physics/projection_2d.c
								srcs/physics/raycasting_3d_final.c
								srcs/physics/rotations_x.c
								srcs/physics/rotations_y.c
								srcs/physics/rotations_z.c
								srcs/physics/slide.c
								srcs/player
								srcs/player/init_rays.c
								srcs/player/player.c
								srcs/time
								srcs/time/time.c
								srcs/ui
								srcs/credit.c
								srcs/error.c
								srcs/init.c
								srcs/main.c)

set(LIBRARIES -L/${CMAKE_CURRENT_SOURCE_DIR}/libft/ -lft ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2_TTF_LIBRARY} ${SDL2_MIXER_LIBRARY} -lm)
target_link_libraries(${PROJECT_NAME} ${LIBRARIES})